tests/miniJava/neg/000074_mutation.MiniJava
class java { Main static void Main ( String [ ] java ) { { } } }
